# mkdocs-caption

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: doc.yml  lint.yml  publish.yml  tests.yml
config/: index.html
custom/: index.html
demo/: mkdocs.yml
demo/docs/: index.md  second_page.md
docs/: config.md  custom.md  image.md  index.md  quick_start.md  references.md  table.md
image/: index.html
quick_start/: index.html
references/: index.html
search/: search_index.json
src/mkdocs_caption/: __about__.py  __init__.py  config.py  custom.py  helper.py  image.py  logger.py  plugin.py  post_processor.py  table.py
table/: index.html
tests/: __init__.py  conftest.py  test_custom.py  test_image.py  test_plugin.py  test_post_processor.py  test_table.py
